[metadata]
name = ebcdic_parser
version = attr: ebcdic_parser.__version__
author = Vitaly Saversky
author_email = larandvit@hotmail.com
description = Convert mainframe EBCDIC data into Unicode ASCII delimited text files
long_description = file: READMEPYPI.md, CHANGES.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/larandvit/ebcdic-parser
project_urls =
    Bug Tracker = https://github.com/larandvit/ebcdic-parser/issues
    repository = https://github.com/larandvit/ebcdic-parser
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src